fix: :lipstick: fix specificity and selectors to make non-error banners work on firefox

--- a/public/resources/scss/index.scss
+++ b/public/resources/scss/index.scss
@@ -645,8 +645,12 @@ input[type="search"]::-webkit-search-cancel-button {
   margin-left: calc(-1 * var(--padding));
   margin-right: calc(-1 * var(--padding));
   padding: var(--padding);
-  background: var(--icon-hex);
   color: white;
+
+  &:not(.error),
+  .light &:not(.error) {
+    background: var(--icon-hex);
+  }
 
   &.error,
   .light &.error {
@@ -3098,11 +3102,11 @@ main.grid {
     }
 
     @supports not ((-webkit-backdrop-filter: blur(16px)) or (backdrop-filter: blur(16px))) {
-      .cache-only &:not(.banner.error) {
+      .cache-only &:not(.banner) {
         background-blend-mode: luminosity;
         background-color: black;
       }
-      .cache-only.light &:not(.banner.error) {
+      .cache-only.light &:not(.banner) {
         background-color: white;
       }
     }
